           ------------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

06 February 2015 - V.Ivanchenko (hadr-cohe-V10-00-25)
-----------------------------------------------------------------
- G4DiffuseElastic : V.Grichine fixed rare numerical bug (sqrt of 
                     negative argument)

08 January 2015 - A.Ribon
-----------------------------------------------------------------
- G4DiffuseElastic : V.Grichine bug-fix in theta_cms momentum transfer
                     transformation

05 December 2014 - G.Cosmo
-----------------------------------------------------------------
- Corrected sources.cmake to include missing files:
    G4LEHadronProtonElastic.hh
    G4LEHadronProtonElastic.cc

05 December 2014 - V.Ivanchenko
-----------------------------------------------------------------
- G4DiffuseElastic - V.Grichine fixed low-energy neutrons
- G4NuclNuclDiffuseElastic - V.Grichine fixed problem #1691 for 
    700 MeV Be-ions scattering in Be

24 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-24)
-----------------------------------------------------------------
- G4hhElastic - cleanup constructors

21 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-23)
-----------------------------------------------------------------
- G4hhElastic - fixed Coverity report (V.Grichine)

20 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-22)
-----------------------------------------------------------------
- G4LMsdGenerator - fixed memory leak (V.Grichine)

19 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-21)
-----------------------------------------------------------------
- G4LMsdGenerator - fixed shortlived decays (V.Grichine)
