@@ -14,6 +14,11 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+22 October 2015 - A.Ribon      (hadr-cohe-V10-00-26)
+-----------------------------------------------------------------
+- G4DiffuseElastic : bug-fix made by V.Grichine in BuildAngleTable
+  to improve the angle bin accuracy at high energies
+
 06 February 2015 - V.Ivanchenko (hadr-cohe-V10-00-25)
 -----------------------------------------------------------------
 - G4DiffuseElastic : V.Grichine fixed rare numerical bug (sqrt of 
